--- a/src/main/resources/templates/loggedout.html
+++ b/src/main/resources/templates/loggedout.html
@@ -5,7 +5,9 @@
 
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
-<h2>You are now logged out.</h2>
+    <div class="container">
+        <h2>You are now logged out.</h2>
+    </div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 </body>
