--- a/src/main/resources/templates/wisdomsearch.html
+++ b/src/main/resources/templates/wisdomsearch.html
@@ -5,7 +5,9 @@
 
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
+    <div class="container">
 <h2>Sorry, searching is a work in progress!</h2>
+    </div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 </body>
