--- a/src/main/resources/templates/addvoteresult.html
+++ b/src/main/resources/templates/addvoteresult.html
@@ -4,11 +4,11 @@
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
-<div th:switch="${statusCode}">
-    <h2 th:case="201">Your vote was added successfully!</h2>
-    <h2 th:case="400">That's not a valid vote!</h2>
-    <h2 th:case="409">That vote exists already and was not added.</h2>
-</div>
+    <div th:switch="${statusCode}" class="container">
+        <h2 th:case="201">Your vote was added successfully!</h2>
+        <h2 th:case="400">That's not a valid vote!</h2>
+        <h2 th:case="409">That vote exists already and was not added.</h2>
+    </div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 </body>
