Mark Display Name as a WIP feature, bring the login page within the fold, and add anyone with my username as an admin until I get a real database

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,16 +1,15 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head(pageTitle='Register an Upwise Account')"></head>
+<head th:replace="fragments/head :: head(pageTitle='Log In to an Upwise Account')"></head>
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <main>
 <div class="container">
-    <form action="#" th:action="@{/register}" th:object="${userToRegister}" method="post">
-        <p>Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}"/></p>
-        <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}"/></p>
-        <p>Password: <input type="text" th:field="*{password}" th:placeholder="#{placeholder.password}"/></p>
+    <form action="#" th:action="@{/login}" th:method="post">
+        <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}"/></p>
+        <p>Password: <input type="text" name="upwisePassword" th:placeholder="#{placeholder.password}"/></p>
         <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
     </form>
 </div>
