--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -5,44 +5,46 @@
 
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
-<div class="container">
-    <h2 th:text="#{title.leaderboard}">Wisdom Leaderboard</h2>
-    <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
-        <div class="row" th:each="wisdom : ${allWisdoms}">
-            <div class="col s12">
-                <div class="card">
-                    <div class="card-content">
+    <div class="container">
+        <h2 th:text="#{title.leaderboard}">Wisdom Leaderboard</h2>
+        <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
+            <div class="row" th:each="wisdom : ${allWisdoms}">
+                <div class="col s12">
+                    <div class="card">
+                        <div class="card-content">
                         <span class="card-title" th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways
                             before crossing a
                             one-way street.
                         </span>
-                        <div th:text="${wisdom.attribution}">Doug Linder</div>
-                    </div>
-                    <div class="card-action">
-                        <a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a>
-                        <div th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
-                        <div th:unless="${#lists.isEmpty(wisdom.votes)}"
-                             th:text="${#lists.size(wisdom.votes)} + ' votes'">-1 votes</div>
-                        <div th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</div>
-                                <div>
-                                    <form method="POST" th:action="@{/addvote}">
+                            <div th:text="${wisdom.attribution}">Doug Linder</div>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a>
+                            <div th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</div>
+                            <div th:unless="${#lists.isEmpty(wisdom.votes)}"
+                                 th:text="${#lists.size(wisdom.votes)} + ' votes'">-1 votes
+                            </div>
+                            <div th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</div>
+                            <div>
+                                <form method="POST" th:action="@{/addvote}">
                                     <p><input type="hidden" name="wisdomContent" th:value="${wisdom.wisdomContent}">
                                     </p>
                                     <p><input type="hidden" name="wisdomAttribution"
                                               th:value="${wisdom.attribution}"></p>
                                     <button type="submit"
-                                            class="btn-floating btn-large waves-effect waves-light">
-                                        <i class="material-icons">trending_up</i>
-                                        </button><label class="vote-button-label">Vote for this wisdom!</label>
-                                    </form>
-                                </div>
+                                            class="btn-floating btn-large waves-effect waves-light vote-up-button">
+                                        <i class="material-icons vote-up-button">trending_up</i>
+                                    </button>
+                                    <label class="vote-button-label">Vote for this wisdom!</label>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="wisdomlist" th:if="${#lists.isEmpty(allWisdoms)}">No wisdoms to rank by vote!</div>
     </div>
-    <div class="wisdomlist" th:if="${#lists.isEmpty(allWisdoms)}">No wisdoms to rank by vote!</div>
-</div>
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 </body>
