--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,9 +16,9 @@
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 <div th:if="${statusCode}" th:switch="${statusCode}">
-    <script th:case="201">M.toast({html: "Your username was registered!"})</script>
-    <script th:case="400">M.toast({html: "That account information isn't valid!"})</script>
-    <script th:case="409">M.toast({html: "That login already exists!"})</script>
+    <script th:case="201">M.toast({html: "Your username was registered!", classes: "toast"})</script>
+    <script th:case="400">M.toast({html: "That account information isn't valid!", classes: "toast"})</script>
+    <script th:case="409">M.toast({html: "That login already exists!", classes: "toast"})</script>
 </div>
 </body>
 <footer th:replace="fragments/footer :: footer"></footer>
