--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <div class="container">
     <form action="#" th:action="@{/login}" th:method="post">
         <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}"/></p>
-        <p>Password: <input type="text" name="upwisePassword" th:placeholder="#{placeholder.password}"/></p>
+        <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}"/></p>
         <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
     </form>
 </div>
