--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
     <form action="#" th:action="@{/register}" th:object="${userToRegister}" method="post">
         <p>Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}"/></p>
         <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}"/></p>
-        <p>Password: <input type="text" th:field="*{password}" th:placeholder="#{placeholder.password}"/></p>
+        <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}"/></p>
         <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
     </form>
 </div>
