--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 
 <main>
 <div class="container">
+    <h2>Log In to Upwise</h2>
     <form action="#" th:action="@{/login}" th:method="post">
         <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}"/></p>
         <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}"/></p>
