--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,8 +7,9 @@
 
 <main>
 <div class="container">
+    <h2>Register an Upwise Account</h2>
     <form action="#" th:action="@{/register}" th:object="${userToRegister}" method="post">
-        <p>Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}"/></p>
+        <p>Desired Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}"/></p>
         <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}"/></p>
         <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}"/></p>
         <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
