Leaderboard now shows 'log in to vote' if unauthenticated instead of 'vote for this wisdom' [https://trello.com/c/dDvn5iZt]

--- a/src/main/resources/templates/wisdomleaderboard.html
+++ b/src/main/resources/templates/wisdomleaderboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments/head :: head(pageTitle='Wisdom Leaderboard')"></head>
 <body>
 
@@ -25,7 +25,7 @@
                                  th:text="${#lists.size(wisdom.votes)} + ' votes'">-1 votes
                             </div>
                             <div th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</div>
-                            <div>
+                            <div class="vote-form-div">
                                 <form method="POST" th:action="@{/addvote}">
                                     <p><input type="hidden" name="wisdomContent" th:value="${wisdom.wisdomContent}">
                                     </p>
@@ -33,9 +33,11 @@
                                               th:value="${wisdom.attribution}"></p>
                                     <button type="submit"
                                             class="btn-floating btn-large waves-effect waves-light vote-up-button">
-                                        <i class="material-icons vote-up-button">trending_up</i>
+                                        <i class="material-icons vote-up-button" sec:authorize="isAuthenticated()">trending_up</i>
+                                        <i class="material-icons vote-up-button" sec:authorize="isAnonymous()">perm_identity</i>
                                     </button>
-                                    <label class="vote-button-label">Vote for this wisdom!</label>
+                                    <label class="vote-button-label" sec:authorize="isAuthenticated()">Vote for this wisdom!</label>
+                                    <label class="vote-button-label" sec:authorize="isAnonymous()">Log in to vote!</label>
                                 </form>
                             </div>
                         </div>
