--- a/src/main/resources/templates/viewwisdom.html
+++ b/src/main/resources/templates/viewwisdom.html
@@ -19,7 +19,6 @@
         </div>
         <div class="wisdomSecondaryInfo">
             <h4 th:text="${wisdom.attribution}" class="almendra center">Doug Linder</h4>
-            <!--<span><a th:href="@{'/user/' + waves-effect waves-light btn-small${wisdom.addedByUsername}}" th:text="${wisdom.addedByUsername}">intellijames</a> <p th:text="${wisdom.timeAdded}">January 1, 1970 01:00:00 GMT</p></span>-->
             <div class="divider"></div>
             <div class="row">
                 <div class="voter-info col s6">
@@ -33,23 +32,7 @@
                     <p th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</p>
                 </div>
                 <div class="vote-form-div-color2 col s6">
-                    <div>
-                    <form method="POST" th:action="@{/addvote}"
-                          th:unless="${wisdom.isVotedForBy(#authentication.name)}">
-                        <p><input type="hidden" name="wisdomContent" th:value="${wisdom.wisdomContent}">
-                        </p>
-                        <p><input type="hidden" name="wisdomAttribution"
-                                  th:value="${wisdom.attribution}"></p>
-                        <button type="submit"
-                                class="btn-floating btn-large waves-effect waves-light vote-up-button">
-                            <i class="material-icons vote-up-button" sec:authorize="isAuthenticated()">trending_up</i>
-                            <i class="material-icons vote-up-button" sec:authorize="isAnonymous()">perm_identity</i>
-                        </button>
-                        <label class="vote-button-label" sec:authorize="isAuthenticated()">Vote for this wisdom!</label>
-                        <label class="vote-button-label" sec:authorize="isAnonymous()">Log in to vote!</label>
-                    </form>
-                    <h4 th:if="${wisdom.isVotedForBy(#authentication.name)}">Thanks for voting!</h4>
-                    </div>
+                    <div th:replace="fragments/voteform :: voteform(wisdom=${wisdom})"></div>
                 </div>
             </div>
         </div>
