--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,9 +9,9 @@
 <div class="container">
     <h2>Log In to Upwise</h2>
     <form action="#" th:action="@{/login}" th:method="post">
-        <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}"/></p>
-        <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}"/></p>
-        <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+        <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}" tabindex="1"/></p>
+        <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}" tabindex="2"/></p>
+        <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
     </form>
 </div>
 </main>
