--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,10 +9,10 @@
 <div class="container">
     <h2>Register an Upwise Account</h2>
     <form action="#" th:action="@{/register}" th:object="${userToRegister}" method="post">
-        <p>Desired Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}"/></p>
-        <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}"/></p>
-        <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}"/></p>
-        <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+        <p>Desired Login Name: <input type="text" th:field="*{loginUsername}" th:placeholder="#{placeholder.username}" tabindex="1"/></p>
+        <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}" tabindex="2"/></p>
+        <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}" tabindex="3"/></p>
+        <p><input type="submit" value="Submit" tabindex="4"/> <input type="reset" value="Reset" tabindex="5"/></p>
     </form>
 </div>
 </main>
