--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,14 +6,18 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <main>
-<div class="container">
-    <h2>Log In to Upwise</h2>
-    <form action="#" th:action="@{/login}" th:method="post">
-        <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}" tabindex="1"/></p>
-        <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}" tabindex="2"/></p>
-        <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
-    </form>
-</div>
+    <div class="container">
+        <h2>Log In to Upwise</h2>
+        <form action="#" th:action="@{/login}" th:method="post">
+            <p>Login Name: <input type="text" name="upwiseLoginUsername" th:placeholder="#{placeholder.username}"
+                                  tabindex="1"/></p>
+            <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}"
+                                tabindex="2"/></p>
+            <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
+        </form>
+        <p class="registerlink">You can <a href="/register">register</a> here.</p>
+    </div>
+
 </main>
 <a th:replace="fragments/footer :: scriptimports"></a>
 <div th:if="${statusCode}" th:switch="${statusCode}">
