Update footer to include link to Github issues page [https://trello.com/c/dGSjfsYv]

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,6 +12,6 @@
 </a>
 </body>
 <footer th:fragment="footer">
-    &copy;2018 absolutely no one. Source is open at <a href="http://www.github.com/sapphon/upwise">github.com/sapphon/upwise</a>
+    &copy;2018 absolutely no one. Source is open at <a th:href="#{upwiseRepoUrl}">github.com/sapphon/upwise</a>.  Issues?  Report them <a th:href="#{upwiseIssuesUrl}">here</a>.
 </footer>
 </html>
