Login and registration now pull response text from central location: eventresponse fragment.  Aforementioned file now part of scriptimports fragment that's included on every user page. [https://trello.com/c/ZenMROn6]

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"
             type="text/javascript"></script>
     <script src="/scripts/materialize-auto-init.js" type="text/javascript"></script>
+    <div th:replace="fragments/eventresponse :: eventresponse"></div>
 </a>
 </body>
 <footer th:fragment="footer">
