--- a/src/main/resources/templates/fragments/eventresponse.html
+++ b/src/main/resources/templates/fragments/eventresponse.html
@@ -14,6 +14,11 @@
         <script th:case="400">M.toast({html: "That account information isn't valid!", classes: "toast"})</script>
         <script th:case="409">M.toast({html: "That login already exists!", classes: "toast"})</script>
     </div>
+    <div th:if="${addWisdomStatusCode}" th:switch="${addWisdomStatusCode}">
+        <script th:case="201">M.toast({html: "Your wisdom was added!", classes: "toast"})</script>
+        <script th:case="400">M.toast({html: "That's not a valid wisdom!", classes: "toast"})</script>
+        <script th:case="409">M.toast({html: "That wisdom already exists!", classes: "toast"})</script>
+    </div>
 </div>
 </body>
 </html>
