Voting form now has input specifying post-success callback url; leaderboard votes call back leaderboard and viewwisdom votes call back viewwisdom [https://trello.com/c/s3b4Hn1Z]

--- a/src/main/resources/templates/fragments/voteform.html
+++ b/src/main/resources/templates/fragments/voteform.html
@@ -12,6 +12,7 @@
         </p>
         <p><input type="hidden" name="wisdomAttribution"
                   th:value="${wisdom.attribution}"></p>
+        <p><input type="hidden" name="destinationViewName" th:value="${callback}"></p>
         <button type="submit"
                 class="btn-floating btn-large waves-effect waves-light vote-up-button">
             <i class="material-icons vote-up-button" sec:authorize="isAuthenticated()">trending_up</i>
