Make link to registration page from login include the word 'here' [https://trello.com/c/S6CNadoW]

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
                                 tabindex="2"/></p>
             <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
         </form>
-        <p class="registerlink">You can <a href="/register">register</a> here.</p>
+        <p class="registerlink">You can <a href="/register">register here.</a></p>
     </div>
 
 </main>
