--- a/src/main/resources/templates/analytics.html
+++ b/src/main/resources/templates/analytics.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments/head :: head(pageTitle='Analytics')"></head>
 <body>
-
+<div th:replace="fragments/navbar :: navbar"></div>
+<main>
+    <div class="container">
+        <h2 th:text="#{title.analytics}">Analytics</h2>
+        <div class="eventlist" th:unless="${#lists.isEmpty(events)}">
+            <div class="row">
+                <div class="col s4">
+                    <h4>EVENT TYPE</h4>
+                </div>
+                <div class="col s4">
+                    <h4>EVENT INSTIGATOR</h4>
+                </div>
+                <div class="col s4">
+                    <h4>EVENT TIMESTAMP</h4>
+                </div>
+            </div>
+            <div class="row" th:each="event : ${events}">
+                <div class="col s4">
+                    <p th:text="${event.eventDescription}">Harpoon Throw</p>
+                </div>
+                <div class="col s4">
+                    <p th:text="${event.eventInitiator}">Ahab the Captain</p>
+                </div>
+                <div class="col s4">
+                    <p th:text="${event.eventTime}">2019-01-01 11:11:11.11111</p>
+                </div>
+            </div>
+        </div>
+        <div class="eventlist" th:if="${#lists.isEmpty(events)}">
+            <h4>No analytics events to display!</h4>
+        </div>
+    </div>
+</main>
 </body>
 </html>
